# miumono

./: .coverage  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  release-please-config.json  tui_demo.py
.github/workflows/: ci.yml  docs.yml  pr-title-check.yml  release-please.yml  release.yml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  docs.json  project-overview-pdr.md  project-roadmap.md  release-management.md  system-architecture.md
docs/api-reference/: overview.mdx
docs/contributing/: codebase-summary.mdx  roadmap.mdx
docs/core-concepts/: architecture.mdx  packages.mdx
docs/getting-started/: installation.mdx  introduction.mdx  quickstart.mdx
docs/guides/: code-standards.mdx  deployment.mdx  release-management.mdx
plans/tiers/: tier-4-platform.md
scripts/: README.md  bump_version.py  install.ps1  install.sh  release.py
tests/integration/: __init__.py  conftest.py  test_core_code_integration.py
tests/unit/: __init__.py  test_commands.py  test_help_modal.py
